@@ -11,6 +11,21 @@
 //	Helper classes and protocols for testing
 // --------------------------------------------------------------------------------------
 
+@interface TestClassWithSelectorMethod : NSObject
+
+- (void)doWithSelector:(SEL)aSelector;
+
+@end
+
+@implementation TestClassWithSelectorMethod
+
+- (void)doWithSelector:(SEL)aSelector
+{
+}
+
+@end
+
+
 @interface TestClassWithTypeQualifierMethod : NSObject
 
 - (void)aSpecialMethod:(byref in void *)someArg;
@@ -127,16 +142,15 @@ static NSString *TestNotification = @"TestNotification";
 {
 	[[mock stub] hasSuffix:[OCMArg checkWithBlock:^(id value) { return [value isEqualToString:@"foo"]; }]];
 
-	STAssertNoThrow([mock hasSuffix:@"foo"], @"Should not have thrown a exception");   
-	STAssertThrows([mock hasSuffix:@"bar"], @"Should have thrown a exception");   
+	STAssertNoThrow([mock hasSuffix:@"foo"], @"Should not have thrown a exception");
+	STAssertThrows([mock hasSuffix:@"bar"], @"Should have thrown a exception");
 }
-	
+
 #endif
 
 - (void)testAcceptsStubbedMethodWithNilArgument
 {
 	[[mock stub] hasSuffix:nil];
-	
 	[mock hasSuffix:nil];
 }
 
@@ -153,26 +167,40 @@ static NSString *TestNotification = @"TestNotification";
 	[mock stringByPaddingToLength:20 withString:@"foo" startingAtIndex:5];
 }
 
-
 - (void)testRaisesExceptionWhenMethodWithOneWrongScalarArgumentIsCalled
 {
 	[[mock stub] stringByPaddingToLength:20 withString:@"foo" startingAtIndex:5];
-	STAssertThrows([mock stringByPaddingToLength:20 withString:@"foo" startingAtIndex:3], @"Should have raised an exception.");	
+	STAssertThrows([mock stringByPaddingToLength:20 withString:@"foo" startingAtIndex:3], @"Should have raised an exception.");
 }
+
+
+- (void)testAcceptsStubbedMethodWithSelectorArgument
+{
+    mock = [OCMockObject mockForClass:[TestClassWithSelectorMethod class]];
+    [[mock stub] doWithSelector:@selector(allKeys)];
+    [mock doWithSelector:@selector(allKeys)];
+}
+
+- (void)testRaisesExceptionWhenMethodWithWrongSelectorArgumentIsCalled
+{
+    mock = [OCMockObject mockForClass:[TestClassWithSelectorMethod class]];
+    [[mock stub] doWithSelector:@selector(allKeys)];
+    STAssertThrows([mock doWithSelector:@selector(allValues)],nil);
+}
+
+- (void)testAcceptsStubbedMethodWithAnySelectorArgument
+{
+    mock = [OCMockObject mockForClass:[TestClassWithSelectorMethod class]];
+    [[mock stub] doWithSelector:[OCMArg anySelector]];
+    [mock doWithSelector:@selector(allKeys)];
+}
+
 
 - (void)testAcceptsStubbedMethodWithPointerArgument
 {
 	NSError *error;
 	[[[mock stub] andReturnValue:@YES] writeToFile:[OCMArg any] atomically:YES encoding:NSMacOSRomanStringEncoding error:&error];
-	
-	STAssertTrue([mock writeToFile:@"foo" atomically:YES encoding:NSMacOSRomanStringEncoding error:&error], nil);
-}
 
-- (void)testAcceptsStubbedMethodWithAnyPointerArgument
-{
-	NSError *error;
-	[[[mock stub] andReturnValue:@YES] writeToFile:[OCMArg any] atomically:YES encoding:NSMacOSRomanStringEncoding error:[OCMArg anyPointer]];
-	
 	STAssertTrue([mock writeToFile:@"foo" atomically:YES encoding:NSMacOSRomanStringEncoding error:&error], nil);
 }
 
@@ -181,10 +209,18 @@ static NSString *TestNotification = @"TestNotification";
 	NSString *string;
 	NSString *anotherString;
 	NSArray *array;
-	
+
 	[[mock stub] completePathIntoString:&string caseSensitive:YES matchesIntoArray:&array filterTypes:[OCMArg any]];
-	
+
 	STAssertThrows([mock completePathIntoString:&anotherString caseSensitive:YES matchesIntoArray:&array filterTypes:[OCMArg any]], nil);
+}
+
+- (void)testAcceptsStubbedMethodWithAnyPointerArgument
+{
+    NSError *error;
+    [[[mock stub] andReturnValue:@YES] writeToFile:[OCMArg any] atomically:YES encoding:NSMacOSRomanStringEncoding error:[OCMArg anyPointer]];
+
+    STAssertTrue([mock writeToFile:@"foo" atomically:YES encoding:NSMacOSRomanStringEncoding error:&error], nil);
 }
 
 - (void)testAcceptsStubbedMethodWithVoidPointerArgument
@@ -206,7 +242,7 @@ static NSString *TestNotification = @"TestNotification";
 - (void)testAcceptsStubbedMethodWithPointerPointerArgument
 {
 	NSError *error = nil;
-	[[mock stub] initWithContentsOfFile:@"foo.txt" encoding:NSASCIIStringEncoding error:&error];	
+	[[mock stub] initWithContentsOfFile:@"foo.txt" encoding:NSASCIIStringEncoding error:&error];
 	[mock initWithContentsOfFile:@"foo.txt" encoding:NSASCIIStringEncoding error:&error];
 }
 
@@ -214,7 +250,7 @@ static NSString *TestNotification = @"TestNotification";
 - (void)testRaisesExceptionWhenMethodWithWrongPointerPointerArgumentIsCalled
 {
 	NSError *error = nil, *error2;
-	[[mock stub] initWithContentsOfFile:@"foo.txt" encoding:NSASCIIStringEncoding error:&error];	
+	[[mock stub] initWithContentsOfFile:@"foo.txt" encoding:NSASCIIStringEncoding error:&error];
 	STAssertThrows([mock initWithContentsOfFile:@"foo.txt" encoding:NSASCIIStringEncoding error:&error2], @"Should have raised.");
 }
 
@@ -232,7 +268,7 @@ static NSString *TestNotification = @"TestNotification";
     NSRange range = NSMakeRange(0,20);
     NSRange otherRange = NSMakeRange(0,10);
 	[[mock stub] substringWithRange:range];
-	STAssertThrows([mock substringWithRange:otherRange], @"Should have raised an exception.");	
+	STAssertThrows([mock substringWithRange:otherRange], @"Should have raised an exception.");
 }
 
 
@@ -262,7 +298,7 @@ static NSString *TestNotification = @"TestNotification";
 	id expectedArg = [OCMockObject mockForClass:[NSString class]];
 	id otherArg = [OCMockObject mockForClass:[NSString class]];
 	[[mock stub] stringByAppendingString:otherArg];
-	STAssertThrows([mock stringByAppendingString:expectedArg], @"Should have raised an exception.");	
+	STAssertThrows([mock stringByAppendingString:expectedArg], @"Should have raised an exception.");
 }
 
 
@@ -287,7 +323,7 @@ static NSString *TestNotification = @"TestNotification";
 {
 	[[[mock stub] andReturn:@"megamock"] lowercaseString];
 	id returnValue = [mock lowercaseString];
-	
+
 	STAssertEqualObjects(@"megamock", returnValue, @"Should have returned stubbed value.");
 }
 
@@ -295,23 +331,23 @@ static NSString *TestNotification = @"TestNotification";
 {
 	[[[mock stub] andReturnValue:@42] intValue];
 	int returnValue = [mock intValue];
-    
+
 	STAssertEquals(42, returnValue, @"Should have returned stubbed value.");
 }
 
 - (void)testRaisesWhenBoxedValueTypesDoNotMatch
 {
 	[[[mock stub] andReturnValue:@42.0] intValue];
-    
+
 	STAssertThrows([mock intValue], @"Should have raised an exception.");
 }
 
 - (void)testReturnsStubbedNilReturnValue
 {
 	[[[mock stub] andReturn:nil] uppercaseString];
-	
+
 	id returnValue = [mock uppercaseString];
-	
+
 	STAssertNil(returnValue, @"Should have returned stubbed value, which is nil.");
 }
 
@@ -324,7 +360,7 @@ static NSString *TestNotification = @"TestNotification";
 {
 	NSException *exception = [NSException exceptionWithName:@"TestException" reason:@"test" userInfo:nil];
 	[[[mock expect] andThrow:exception] lowercaseString];
-	
+
 	STAssertThrows([mock lowercaseString], @"Should have raised an exception.");
 }
 
@@ -332,12 +368,12 @@ static NSString *TestNotification = @"TestNotification";
 {
 	NotificationRecorderForTesting *observer = [[[NotificationRecorderForTesting alloc] init] autorelease];
 	[[NSNotificationCenter defaultCenter] addObserver:observer selector:@selector(receiveNotification:) name:TestNotification object:nil];
-	
+
 	NSNotification *notification = [NSNotification notificationWithName:TestNotification object:self];
 	[[[mock stub] andPost:notification] lowercaseString];
-	
+
 	[mock lowercaseString];
-	
+
 	STAssertNotNil(observer->notification, @"Should have sent a notification.");
 	STAssertEqualObjects(TestNotification, [observer->notification name], @"Name should match posted one.");
 	STAssertEqualObjects(self, [observer->notification object], @"Object should match posted one.");
@@ -347,10 +383,10 @@ static NSString *TestNotification = @"TestNotification";
 {
 	NotificationRecorderForTesting *observer = [[[NotificationRecorderForTesting alloc] init] autorelease];
 	[[NSNotificationCenter defaultCenter] addObserver:observer selector:@selector(receiveNotification:) name:TestNotification object:nil];
-	
+
 	NSNotification *notification = [NSNotification notificationWithName:TestNotification object:self];
 	[[[[mock stub] andReturn:@"foo"] andPost:notification] lowercaseString];
-	
+
 	STAssertEqualObjects(@"foo", [mock lowercaseString], @"Should have returned stubbed value.");
 	STAssertNotNil(observer->notification, @"Should have sent a notification.");
 }
@@ -364,9 +400,9 @@ static NSString *TestNotification = @"TestNotification";
 - (void)testCallsAlternativeMethodAndPassesOriginalArgumentsAndReturnsValue
 {
 	[[[mock stub] andCall:@selector(valueForString:andMask:) onObject:self] commonPrefixWithString:@"FOO" options:NSCaseInsensitiveSearch];
-	
+
 	NSString *returnValue = [mock commonPrefixWithString:@"FOO" options:NSCaseInsensitiveSearch];
-	
+
 	STAssertEqualObjects(@"[FOO, 1]", returnValue, @"Should have passed and returned invocation.");
 }
 
@@ -374,16 +410,16 @@ static NSString *TestNotification = @"TestNotification";
 
 - (void)testCallsBlockWhichCanSetUpReturnValue
 {
-	void (^theBlock)(NSInvocation *) = ^(NSInvocation *invocation) 
+	void (^theBlock)(NSInvocation *) = ^(NSInvocation *invocation)
 		{
 			NSString *value;
 			[invocation getArgument:&value atIndex:2];
 			value = [NSString stringWithFormat:@"MOCK %@", value];
 			[invocation setReturnValue:&value];
 		};
-		
+
 	[[[mock stub] andDo:theBlock] stringByAppendingString:[OCMArg any]];
-		
+
 	STAssertEqualObjects(@"MOCK foo", [mock stringByAppendingString:@"foo"], @"Should have called block.");
 	STAssertEqualObjects(@"MOCK bar", [mock stringByAppendingString:@"bar"], @"Should have called block.");
 }
@@ -404,10 +440,10 @@ static NSString *TestNotification = @"TestNotification";
 {
 	NSString *expectedName = @"Test";
 	NSArray *expectedArray = [NSArray array];
-	
-	[[mock expect] completePathIntoString:[OCMArg setTo:expectedName] caseSensitive:YES 
+
+	[[mock expect] completePathIntoString:[OCMArg setTo:expectedName] caseSensitive:YES
 						 matchesIntoArray:[OCMArg setTo:expectedArray] filterTypes:[OCMArg any]];
-	
+
 	NSString *actualName = nil;
 	NSArray *actualArray = nil;
 	[mock completePathIntoString:&actualName caseSensitive:YES matchesIntoArray:&actualArray filterTypes:nil];
@@ -422,12 +458,12 @@ static NSString *TestNotification = @"TestNotification";
 {
     mock = [OCMockObject mockForClass:[TestClassWithIntPointerMethod class]];
     [[mock stub] returnValueInPointer:[OCMArg setToValue:@1234]];
-    
+
     int actualValue = 0;
     [mock returnValueInPointer:&actualValue];
-    
+
     STAssertEquals(1234, actualValue, @"Should have returned value via pass by ref argument.");
-    
+
 }
 
 
@@ -455,7 +491,7 @@ static NSString *TestNotification = @"TestNotification";
 {
 	[[mock expect] lowercaseString];
 	[[mock expect] uppercaseString];
-	
+
 	[mock lowercaseString];
 	[mock uppercaseString];
 }
@@ -465,7 +501,7 @@ static NSString *TestNotification = @"TestNotification";
 {
 	[[mock expect] lowercaseString];
 	[[mock expect] uppercaseString];
-	
+
 	[mock uppercaseString];
 	[mock lowercaseString];
 }
@@ -479,10 +515,10 @@ static NSString *TestNotification = @"TestNotification";
 {
 	[[mock expect] lowercaseString];
 	[[mock expect] uppercaseString];
-	
+
 	[mock lowercaseString];
 	[mock uppercaseString];
-	
+
 	[mock verify];
 }
 
@@ -491,9 +527,9 @@ static NSString *TestNotification = @"TestNotification";
 {
 	[[mock expect] lowercaseString];
 	[[mock expect] uppercaseString];
-	
+
 	[mock lowercaseString];
-	
+
 	STAssertThrows([mock verify], @"Should have raised an exception.");
 }
 
@@ -501,10 +537,10 @@ static NSString *TestNotification = @"TestNotification";
 {
 	[[mock expect] lowercaseString];
 	[[mock expect] lowercaseString];
-	
+
 	[mock lowercaseString];
 	[mock lowercaseString];
-	
+
 	[mock verify];
 }
 
@@ -513,10 +549,10 @@ static NSString *TestNotification = @"TestNotification";
 {
 	[[[mock expect] andReturn:@"foo"] lowercaseString];
 	[[[mock expect] andReturn:@"bar"] lowercaseString];
-	
+
 	STAssertEqualObjects(@"foo", [mock lowercaseString], @"Should have returned first stubbed value");
 	STAssertEqualObjects(@"bar", [mock lowercaseString], @"Should have returned seconds stubbed value");
-	
+
 	[mock verify];
 }
 
@@ -524,11 +560,11 @@ static NSString *TestNotification = @"TestNotification";
 {
 	[[mock stub] hasSuffix:@"foo"];
 	[[mock expect] hasSuffix:@"bar"];
-	
+
 	[mock hasSuffix:@"foo"];
 	[mock hasSuffix:@"bar"];
 	[mock hasSuffix:@"foo"]; // Since it's a stub, shouldn't matter how many times we call this
-	
+
 	[mock verify];
 }
 
@@ -547,10 +583,10 @@ static NSString *TestNotification = @"TestNotification";
 - (void)testAcceptsExpectedMethodsInRecordedSequenceWhenOrderMatters
 {
 	[mock setExpectationOrderMatters:YES];
-	
+
 	[[mock expect] lowercaseString];
 	[[mock expect] uppercaseString];
-	
+
 	STAssertNoThrow([mock lowercaseString], @"Should have accepted expected method in sequence.");
 	STAssertNoThrow([mock uppercaseString], @"Should have accepted expected method in sequence.");
 }
@@ -558,10 +594,10 @@ static NSString *TestNotification = @"TestNotification";
 - (void)testRaisesExceptionWhenSequenceIsWrongAndOrderMatters
 {
 	[mock setExpectationOrderMatters:YES];
-	
+
 	[[mock expect] lowercaseString];
 	[[mock expect] uppercaseString];
-	
+
 	STAssertThrows([mock uppercaseString], @"Should have complained about wrong sequence.");
 }
 
@@ -573,13 +609,13 @@ static NSString *TestNotification = @"TestNotification";
 - (void)testReturnsDefaultValueWhenUnknownMethodIsCalledOnNiceClassMock
 {
 	mock = [OCMockObject niceMockForClass:[NSString class]];
-	STAssertNil([mock lowercaseString], @"Should return nil on unexpected method call (for nice mock).");	
+	STAssertNil([mock lowercaseString], @"Should return nil on unexpected method call (for nice mock).");
 	[mock verify];
 }
 
 - (void)testRaisesAnExceptionWhenAnExpectedMethodIsNotCalledOnNiceClassMock
 {
-	mock = [OCMockObject niceMockForClass:[NSString class]];	
+	mock = [OCMockObject niceMockForClass:[NSString class]];
 	[[[mock expect] andReturn:@"HELLO!"] uppercaseString];
 	STAssertThrows([mock verify], @"Should have raised an exception because method was not called.");
 }
@@ -610,12 +646,12 @@ static NSString *TestNotification = @"TestNotification";
 - (void)testCanStubValueForKeyMethod
 {
 	id returnValue;
-	
+
 	mock = [OCMockObject mockForClass:[NSObject class]];
 	[[[mock stub] andReturn:@"SomeValue"] valueForKey:@"SomeKey"];
-	
+
 	returnValue = [mock valueForKey:@"SomeKey"];
-	
+
 	STAssertEqualObjects(@"SomeValue", returnValue, @"Should have returned value that was set up.");
 }
 
